Closed
Bug 537967
Opened 15 years ago
Closed 15 years ago
Moving FILE_ILLEGAL_CHARACTERS from nsCRT.h to nsCRTGlue.h for frozen linkages
Categories
(Core :: XPCOM, defect)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a3
People
(Reporter: ul-mcamafia, Assigned: ul-mcamafia)
References
Details
(Keywords: verified1.9.1, verified1.9.2)
Attachments
(1 file)
3.67 KB,
patch
|
benjamin
:
review+
shaver
:
superreview+
beltzner
:
approval1.9.2.2+
beltzner
:
approval1.9.1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.9.1.6) Gecko/20091206 SeaMonkey/2.0.1
Build Identifier:
need to include nsCRT.h in mailnews/base/public/msgCore.h to circumvent redefinition. This macros need to be uniquely accessible even after frozen linkage.
Reproducible: Always
Actual Results:
Macro available through inclusion of "nsCRT.h"
Expected Results:
single source to be included. "nsCRTGlue.h"
bug 525463
Assignee | ||
Comment 1•15 years ago
|
||
Assignee | ||
Updated•15 years ago
|
Attachment #425723 -
Flags: review?(jonas)
Updated•15 years ago
|
Assignee: nobody → ul.mcamafia
Severity: normal → trivial
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: in-testsuite-
Version: unspecified → Trunk
Assignee | ||
Comment 2•15 years ago
|
||
Any other candidates to be included in this move for frozen linkage?
Assignee | ||
Comment 3•15 years ago
|
||
Comment on attachment 425723 [details] [diff] [review]
Moved FILE_ILLEGAL_CHARACTERS to nsCRTGlue.h
I really don't know enough about how we want to structure these header files to know where the right place to put this in is.
Attachment #425723 -
Flags: review?(jonas) → review?(benjamin)
Comment 5•15 years ago
|
||
pinging for review, since it's blocking a mailnews review...
Updated•15 years ago
|
Attachment #425723 -
Flags: review?(benjamin) → review+
Assignee | ||
Updated•15 years ago
|
Attachment #425723 -
Flags: superreview?(shaver)
Assignee | ||
Comment 6•15 years ago
|
||
This patch will be needed on branches 1.9.1 and 1.9.2 too after baking on trunk
Comment 7•15 years ago
|
||
Comment on attachment 425723 [details] [diff] [review]
Moved FILE_ILLEGAL_CHARACTERS to nsCRTGlue.h
sure; rs=shaver
Attachment #425723 -
Flags: superreview?(shaver) → superreview+
Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Comment 8•15 years ago
|
||
Keywords: checkin-needed
Assignee | ||
Updated•15 years ago
|
Attachment #425723 -
Flags: approval1.9.2.2?
Attachment #425723 -
Flags: approval1.9.1.9?
Assignee | ||
Updated•15 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Target Milestone: --- → mozilla1.9.3a3
Comment 9•15 years ago
|
||
Comment on attachment 425723 [details] [diff] [review]
Moved FILE_ILLEGAL_CHARACTERS to nsCRTGlue.h
a=beltzner for branches, someone please send 'er over.
Attachment #425723 -
Flags: approval1.9.2.2?
Attachment #425723 -
Flags: approval1.9.2.2+
Attachment #425723 -
Flags: approval1.9.1.9?
Attachment #425723 -
Flags: approval1.9.1.9+
Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: [checkin to mozilla-1.9.2] [checkin to mozilla-1.9.1]
Comment 10•15 years ago
|
||
https://hg.mozilla.org/releases/mozilla-1.9.1/rev/2e523d1e398b
https://hg.mozilla.org/releases/mozilla-1.9.2/rev/03ebb7b90df8
status1.9.1:
--- → .9-fixed
status1.9.2:
--- → .2-fixed
Keywords: checkin-needed
Whiteboard: [checkin to mozilla-1.9.2] [checkin to mozilla-1.9.1]
Assignee | ||
Updated•15 years ago
|
Keywords: verified1.9.1,
verified1.9.2
You need to log in
before you can comment on or make changes to this bug.
Description
•