Bug 537967 - Moving FILE_ILLEGAL_CHARACTERS from nsCRT.h to nsCRTGlue.h for frozen linkages, r=bsmedberg,sr=shaver